<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather Station</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="update_interval">Update interval (minutes)</string>
    <string name="api_url">API Url</string>
    <string name="app_full_name">WeatherStation Android Client</string>
    <string name="error_occured">Something went wrong</string>
    <string name="error_data_not_fetched">Something went wrong, looks like server failed to response</string>
    <string name="data_fetched">Data fetched</string>
    <string name="refresh">Refresh</string>
    <string name="notification_now">Now: </string>
    <string name="notification_junction"> and </string>
    <string name="notification_text">Open WeatherStation for details</string>
    <string name="humidity_label">Humidity: </string>
    <string name="pressure_label">Pressure: </string>
    <string name="dummy_temp">--.-</string>

    <string name="readoutName_Humidity">Humidity</string>
    <string name="readoutName_Pressure">Pressure</string>
    <string name="readoutName_Temperature">Temperature</string>
    <string name="readoutName_WindSpeed">Wind speed</string>
    <string name="readoutName_WindDirection">Wind direction</string>
    <string name="readoutName_TempMax">Max. Temperature</string>
    <string name="readoutName_TempMin">Min. Temperature</string>
    <string name="readoutName_Clouds">Clouds</string>
    <string name="readoutName_Rain">Rain</string>
    <string name="readoutName_Snow">Snow</string>
    <string name="snow">Snow</string>
    <string name="rain">Rain</string>
    <string name="clouds">Clouds</string>
    <string name="wind">Wind</string>
    <string name="current_weather_icon">Current weather icon</string>
    <string name="empty_temperature">--.-\u00B0C</string>

    <string name="dayOfWeek_0">Sun</string>
    <string name="dayOfWeek_1">Mon</string>
    <string name="dayOfWeek_2">Tue</string>
    <string name="dayOfWeek_3">Wed</string>
    <string name="dayOfWeek_4">Thu</string>
    <string name="dayOfWeek_5">Fri</string>
    <string name="dayOfWeek_6">Sat</string>

    <string name="forecast">Forecast</string>

    <string name="settings_update_in_background">Auto update in background</string>
    <string name="settings_notifications">Weather notifications</string>

    <string name="forecast_temperatureHeader">Temperature</string>
    <string name="forecast_pressureHeader">Pressure</string>
    <string name="forecast_humidityHeader">Humidity</string>
    <string name="forecast_cloudsHeader">Clouds</string>
    <string name="forecast_rainHeader">Rain</string>
    <string name="forecast_snowHeader">Snow</string>
    <string name="forecast_windHeader">Wind</string>
    <string name="forecast_day">Day</string>
    <string name="forecast_night">Night</string>

</resources>
